# jetson-ready-ros2-object-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  package.xml  setup.cfg  setup.py
config/: detector.yaml
docker/: entrypoint.sh
launch/: object_detection.launch.py
object_detection_ros2/: __init__.py  benchmark.py  detector_node.py  detectors.py
tests/: test_detection_utils.py
